force-app/main/default/objects/Web_Data__c/fields/PROcap11__c.field-meta.xml
<CustomField>
    <fullName>PROcap11__c</fullName>
    <label>PROcap11</label>
    <length>250</length>
    <type>Text</type>
</CustomField>