force-app/main/default/objects/Web_Data__c/fields/PROcap12__c.field-meta.xml
<CustomField>
    <fullName>PROcap12__c</fullName>
    <label>PROcap12</label>
    <length>250</length>
    <type>Text</type>
</CustomField>