force-app/main/default/objects/Web_Data__c/fields/PROcity__c.field-meta.xml
<CustomField>
    <fullName>PROcity__c</fullName>
    <label>PROcity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>