force-app/main/default/objects/Web_Data__c/fields/PROco__c.field-meta.xml
<CustomField>
    <fullName>PROco__c</fullName>
    <label>PROco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>