force-app/main/default/objects/Web_Data__c/fields/PROcopy__c.field-meta.xml
<CustomField>
    <fullName>PROcopy__c</fullName>
    <label>PROcopy</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>