force-app/main/default/objects/Web_Data__c/fields/PROdisc__c.field-meta.xml
<CustomField>
    <fullName>PROdisc__c</fullName>
    <label>PROdisc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>