force-app/main/default/objects/Web_Data__c/fields/PROemail__c.field-meta.xml
<CustomField>
    <fullName>PROemail__c</fullName>
    <label>PROemail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>