force-app/main/default/objects/Web_Data__c/fields/Profile_Layout__c.field-meta.xml
<CustomField>
    <fullName>Profile_Layout__c</fullName>
    <label>Profile Layout</label>
    <length>100</length>
    <type>Text</type>
</CustomField>