force-app/main/default/objects/Web_Data__c/fields/PROhash__c.field-meta.xml
<CustomField>
    <fullName>PROhash__c</fullName>
    <label>PROhash</label>
    <length>250</length>
    <type>Text</type>
</CustomField>