force-app/main/default/objects/Web_Data__c/fields/PROlic__c.field-meta.xml
<CustomField>
    <fullName>PROlic__c</fullName>
    <label>PROlic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>