force-app/main/default/objects/Web_Data__c/fields/PROlogo__c.field-meta.xml
<CustomField>
    <fullName>PROlogo__c</fullName>
    <label>PROlogo</label>
    <type>Url</type>
</CustomField>