force-app/main/default/objects/Web_Data__c/fields/PROname__c.field-meta.xml
<CustomField>
    <fullName>PROname__c</fullName>
    <label>PROname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>