force-app/main/default/objects/Web_Data__c/fields/PROphone__c.field-meta.xml
<CustomField>
    <fullName>PROphone__c</fullName>
    <label>PROphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>