force-app/main/default/objects/Web_Data__c/fields/PROphoto__c.field-meta.xml
<CustomField>
    <fullName>PROphoto__c</fullName>
    <label>PROphoto</label>
    <type>Url</type>
</CustomField>