force-app/main/default/objects/Web_Data__c/fields/PROsb__c.field-meta.xml
<CustomField>
    <fullName>PROsb__c</fullName>
    <label>PROsb</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>