force-app/main/default/objects/Web_Data__c/fields/PROsm__c.field-meta.xml
<CustomField>
    <fullName>PROsm__c</fullName>
    <label>PROsm</label>
    <length>250</length>
    <type>Text</type>
</CustomField>