force-app/main/default/objects/Web_Data__c/fields/PROst__c.field-meta.xml
<CustomField>
    <fullName>PROst__c</fullName>
    <label>PROst</label>
    <length>250</length>
    <type>Text</type>
</CustomField>