force-app/main/default/objects/Web_Data__c/fields/PROtag__c.field-meta.xml
<CustomField>
    <fullName>PROtag__c</fullName>
    <label>PROtag</label>
    <length>250</length>
    <type>Text</type>
</CustomField>