force-app/main/default/objects/Web_Data__c/fields/PROtitle__c.field-meta.xml
<CustomField>
    <fullName>PROtitle__c</fullName>
    <label>PROtitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>