force-app/main/default/objects/Web_Data__c/fields/PROweb__c.field-meta.xml
<CustomField>
    <fullName>PROweb__c</fullName>
    <label>PROweb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>