force-app/main/default/objects/Web_Data__c/fields/PROzip__c.field-meta.xml
<CustomField>
    <fullName>PROzip__c</fullName>
    <label>PROzip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>