force-app/main/default/objects/Web_Data__c/fields/PRphone__c.field-meta.xml
<CustomField>
    <fullName>PRphone__c</fullName>
    <label>PRphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>