force-app/main/default/objects/Web_Data__c/fields/PRphoto__c.field-meta.xml
<CustomField>
    <fullName>PRphoto__c</fullName>
    <label>PRphoto</label>
    <type>Url</type>
</CustomField>