force-app/main/default/objects/Web_Data__c/fields/PRq1__c.field-meta.xml
<CustomField>
    <fullName>PRq1__c</fullName>
    <label>PRq1</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>