force-app/main/default/objects/Web_Data__c/fields/PRq2__c.field-meta.xml
<CustomField>
    <fullName>PRq2__c</fullName>
    <label>PRq2</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>