force-app/main/default/objects/Web_Data__c/fields/PRq3__c.field-meta.xml
<CustomField>
    <fullName>PRq3__c</fullName>
    <label>PRq3</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>