force-app/main/default/objects/Web_Data__c/fields/PRtitle__c.field-meta.xml
<CustomField>
    <fullName>PRtitle__c</fullName>
    <label>PRtitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>