force-app/main/default/objects/Web_Data__c/fields/PRweb__c.field-meta.xml
<CustomField>
    <fullName>PRweb__c</fullName>
    <label>PRweb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>