force-app/main/default/objects/Web_Data__c/fields/PUBcontact1__c.field-meta.xml
<CustomField>
    <fullName>PUBcontact1__c</fullName>
    <description>Contact field 1 for listing in 5 point mag</description>
    <inlineHelpText>Contact field 1 for listing in 5 point mag</inlineHelpText>
    <label>PUBcontact1</label>
    <type>TextArea</type>
</CustomField>