force-app/main/default/objects/Web_Data__c/fields/PUBcontact2__c.field-meta.xml
<CustomField>
    <fullName>PUBcontact2__c</fullName>
    <description>Contact field 2 for listing in 5 point mag</description>
    <inlineHelpText>Contact field 2 for listing in 5 point mag</inlineHelpText>
    <label>PUBcontact2</label>
    <length>155</length>
    <type>Text</type>
</CustomField>