force-app/main/default/objects/Web_Data__c/fields/PUBcontact3__c.field-meta.xml
<CustomField>
    <fullName>PUBcontact3__c</fullName>
    <description>Third line of contact info for 5 POINT mag (18th page profile)</description>
    <inlineHelpText>Third line of contact info for 5 POINT mag (18th page profile)</inlineHelpText>
    <label>PUBcontact3</label>
    <type>TextArea</type>
</CustomField>