force-app/main/default/objects/Web_Data__c/fields/PUBphoto__c.field-meta.xml
<CustomField>
    <fullName>PUBphoto__c</fullName>
    <label>PUBphoto</label>
    <type>Url</type>
</CustomField>