force-app/main/default/objects/Web_Data__c/fields/Revised_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Revised_Testimonial__c</fullName>
    <label>Revised Testimonial</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>