force-app/main/default/objects/Web_Data__c/fields/Rider_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Rider_Full_Name__c</fullName>
    <label>Rider_Full Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>