force-app/main/default/objects/Web_Data__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <description>September choice for e-newsletter</description>
    <inlineHelpText>September choice for e-newsletter</inlineHelpText>
    <label>September</label>
    <length>255</length>
    <type>Text</type>
</CustomField>