force-app/main/default/objects/Web_Data__c/fields/Spread_Visual_Aids__c.field-meta.xml
<CustomField>
    <fullName>Spread_Visual_Aids__c</fullName>
    <label>Spread Visual Aids</label>
    <type>Url</type>
</CustomField>