force-app/main/default/objects/Web_Data__c/fields/Testimonial_Status__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Status__c</fullName>
    <label>Testimonial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ready to publish</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>