force-app/main/default/objects/Web_Data__c/fields/TestimonialSnippett__c.field-meta.xml
<CustomField>
    <fullName>TestimonialSnippett__c</fullName>
    <label>Testimonial Snippett</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>