force-app/main/default/objects/Web_Data__c/fields/VIDaddress__c.field-meta.xml
<CustomField>
    <fullName>VIDaddress__c</fullName>
    <label>VIDaddress</label>
    <length>250</length>
    <type>Text</type>
</CustomField>