force-app/main/default/objects/Web_Data__c/fields/VIDcity__c.field-meta.xml
<CustomField>
    <fullName>VIDcity__c</fullName>
    <label>VIDcity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>