force-app/main/default/objects/Web_Data__c/fields/VIDco__c.field-meta.xml
<CustomField>
    <fullName>VIDco__c</fullName>
    <label>VIDco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>