force-app/main/default/objects/Web_Data__c/fields/VIDemail__c.field-meta.xml
<CustomField>
    <fullName>VIDemail__c</fullName>
    <label>VIDemail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>