force-app/main/default/objects/Web_Data__c/fields/VIDname__c.field-meta.xml
<CustomField>
    <fullName>VIDname__c</fullName>
    <label>VIDname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>