force-app/main/default/objects/Web_Data__c/fields/VIDphone__c.field-meta.xml
<CustomField>
    <fullName>VIDphone__c</fullName>
    <label>VIDphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>