force-app/main/default/objects/Web_Data__c/fields/VIDphoto__c.field-meta.xml
<CustomField>
    <fullName>VIDphoto__c</fullName>
    <label>VIDphoto</label>
    <type>Url</type>
</CustomField>