force-app/main/default/objects/Web_Data__c/fields/VIDstate__c.field-meta.xml
<CustomField>
    <fullName>VIDstate__c</fullName>
    <label>VIDstate</label>
    <length>250</length>
    <type>Text</type>
</CustomField>