force-app/main/default/objects/Web_Data__c/fields/VIDteammembers__c.field-meta.xml
<CustomField>
    <fullName>VIDteammembers__c</fullName>
    <label>VIDteammembers</label>
    <type>TextArea</type>
</CustomField>