force-app/main/default/objects/Web_Data__c/fields/VIDweb__c.field-meta.xml
<CustomField>
    <fullName>VIDweb__c</fullName>
    <label>VIDweb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>