force-app/main/default/objects/Web_Data__c/fields/VIDzip__c.field-meta.xml
<CustomField>
    <fullName>VIDzip__c</fullName>
    <label>VIDzip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>