force-app/main/default/objects/Web_Data__c/fields/WP4l__c.field-meta.xml
<CustomField>
    <fullName>WP4l__c</fullName>
    <label>WP4l</label>
    <length>250</length>
    <type>Text</type>
</CustomField>