force-app/main/default/objects/Web_Data__c/fields/WPb1__c.field-meta.xml
<CustomField>
    <fullName>WPb1__c</fullName>
    <label>WPb1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>