force-app/main/default/objects/Web_Data__c/fields/WPb2__c.field-meta.xml
<CustomField>
    <fullName>WPb2__c</fullName>
    <label>WPb2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>