force-app/main/default/objects/Web_Data__c/fields/WPb3__c.field-meta.xml
<CustomField>
    <fullName>WPb3__c</fullName>
    <label>WPb3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>