force-app/main/default/objects/Web_Data__c/fields/WPcap__c.field-meta.xml
<CustomField>
    <fullName>WPcap__c</fullName>
    <label>WPcap</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>