force-app/main/default/objects/Web_Data__c/fields/WPco__c.field-meta.xml
<CustomField>
    <fullName>WPco__c</fullName>
    <label>WPco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>