force-app/main/default/objects/Web_Data__c/fields/WPdisc__c.field-meta.xml
<CustomField>
    <fullName>WPdisc__c</fullName>
    <label>WPdisc</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>