force-app/main/default/objects/Web_Data__c/fields/WPlogo__c.field-meta.xml
<CustomField>
    <fullName>WPlogo__c</fullName>
    <label>WPlogo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>