force-app/main/default/objects/Web_Data__c/fields/WPname__c.field-meta.xml
<CustomField>
    <fullName>WPname__c</fullName>
    <label>WPname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>