force-app/main/default/objects/Web_Data__c/fields/WPphoto__c.field-meta.xml
<CustomField>
    <fullName>WPphoto__c</fullName>
    <label>WPphoto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>