force-app/main/default/objects/Web_Data__c/fields/WPtitle__c.field-meta.xml
<CustomField>
    <fullName>WPtitle__c</fullName>
    <label>WPtitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>