force-app/main/default/objects/Web_Data__c/fields/WSJaof__c.field-meta.xml
<CustomField>
    <fullName>WSJaof__c</fullName>
    <label>PUBaof</label>
    <length>250</length>
    <type>Text</type>
</CustomField>