force-app/main/default/objects/Web_Data__c/fields/WSJco__c.field-meta.xml
<CustomField>
    <fullName>WSJco__c</fullName>
    <label>PUBco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>