force-app/main/default/objects/Web_Data__c/fields/WSJname__c.field-meta.xml
<CustomField>
    <fullName>WSJname__c</fullName>
    <label>PUBname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>