force-app/main/default/objects/Web_Data__c/fields/WSJphone__c.field-meta.xml
<CustomField>
    <fullName>WSJphone__c</fullName>
    <label>PUBphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>