force-app/main/default/objects/Web_Data__c/fields/YB10email__c.field-meta.xml
<CustomField>
    <fullName>YB10email__c</fullName>
    <label>YB10email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>