force-app/main/default/objects/Web_Data__c/fields/YB10lic__c.field-meta.xml
<CustomField>
    <fullName>YB10lic__c</fullName>
    <label>YB10lic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>