force-app/main/default/objects/Web_Data__c/fields/YB10name__c.field-meta.xml
<CustomField>
    <fullName>YB10name__c</fullName>
    <label>YB10name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>