force-app/main/default/objects/Web_Data__c/fields/YB10ph__c.field-meta.xml
<CustomField>
    <fullName>YB10ph__c</fullName>
    <label>YB10ph</label>
    <length>250</length>
    <type>Text</type>
</CustomField>