force-app/main/default/objects/Web_Data__c/fields/YB10title__c.field-meta.xml
<CustomField>
    <fullName>YB10title__c</fullName>
    <label>YB10title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>