force-app/main/default/objects/Web_Data__c/fields/YB11email__c.field-meta.xml
<CustomField>
    <fullName>YB11email__c</fullName>
    <label>YB11email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>