force-app/main/default/objects/Web_Data__c/fields/YB11lic__c.field-meta.xml
<CustomField>
    <fullName>YB11lic__c</fullName>
    <label>YB11lic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>