force-app/main/default/objects/Web_Data__c/fields/YB11name__c.field-meta.xml
<CustomField>
    <fullName>YB11name__c</fullName>
    <label>YB11name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>