force-app/main/default/objects/Web_Data__c/fields/YB11phone__c.field-meta.xml
<CustomField>
    <fullName>YB11phone__c</fullName>
    <label>YB11phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>