force-app/main/default/objects/Web_Data__c/fields/YB11title__c.field-meta.xml
<CustomField>
    <fullName>YB11title__c</fullName>
    <label>YB11title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>