force-app/main/default/objects/Web_Data__c/fields/YB12__c.field-meta.xml
<CustomField>
    <fullName>YB12__c</fullName>
    <label>YB12phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>