force-app/main/default/objects/Web_Data__c/fields/YB12email__c.field-meta.xml
<CustomField>
    <fullName>YB12email__c</fullName>
    <label>YB12email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>