force-app/main/default/objects/Web_Data__c/fields/YB12lic__c.field-meta.xml
<CustomField>
    <fullName>YB12lic__c</fullName>
    <label>YB12lic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>