force-app/main/default/objects/Web_Data__c/fields/YB12name__c.field-meta.xml
<CustomField>
    <fullName>YB12name__c</fullName>
    <label>YB12name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>