force-app/main/default/objects/Web_Data__c/fields/YB12title__c.field-meta.xml
<CustomField>
    <fullName>YB12title__c</fullName>
    <label>YB12title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>