force-app/main/default/objects/Web_Data__c/fields/YB1ph__c.field-meta.xml
<CustomField>
    <fullName>YB1ph__c</fullName>
    <label>YB1ph</label>
    <length>250</length>
    <type>Text</type>
</CustomField>