force-app/main/default/objects/Web_Data__c/fields/YB2ph__c.field-meta.xml
<CustomField>
    <fullName>YB2ph__c</fullName>
    <label>YB2ph</label>
    <length>250</length>
    <type>Text</type>
</CustomField>