force-app/main/default/objects/Web_Data__c/listViews/Client_Testimonial_Capture_and_Broadcast.listView-meta.xml
<ListView>
    <fullName>Client_Testimonial_Capture_and_Broadcast</fullName>
    <columns>Fulfillment__c</columns>
    <columns>NAME</columns>
    <columns>Testimonial_Status__c</columns>
    <columns>ASemailcsv__c</columns>
    <columns>Testimonial__c</columns>
    <columns>TestimonialSnippett__c</columns>
    <columns>Revised_Testimonial__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Client Testimonial Capture,Testimonial Survey,Testimonial Service</value>
    </filters>
    <label>Client Testimonial Capture and Broadcast</label>
</ListView>