force-app/main/default/objects/Web_Data__c/listViews/Client_Testimonials_ReadytoPublish.listView-meta.xml
<ListView>
    <fullName>Client_Testimonials_ReadytoPublish</fullName>
    <columns>Fulfillment__c</columns>
    <columns>NAME</columns>
    <columns>Testimonial_Status__c</columns>
    <columns>Testimonial__c</columns>
    <columns>Client_Name__c</columns>
    <columns>TestimonialSnippett__c</columns>
    <columns>Revised_Testimonial__c</columns>
    <columns>ASemailcsv__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Testimonial Survey</value>
    </filters>
    <filters>
        <field>Testimonial_Status__c</field>
        <operation>equals</operation>
        <value>Ready to publish</value>
    </filters>
    <label>Client Testimonials - Ready to Publish</label>
</ListView>