force-app/main/default/objects/Web_Data__c/listViews/NyssaTestimonialView.listView-meta.xml
<ListView>
    <fullName>NyssaTestimonialView</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Marketing_permission__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client_Name__c</columns>
    <columns>Testimonial__c</columns>
    <columns>Testimonial_Status__c</columns>
    <columns>Revised_Testimonial__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>testimonial</value>
    </filters>
    <filters>
        <field>Testimonial_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Testimonial_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Nyssa Testimonial View</label>
</ListView>