force-app/main/default/objects/Web_Data__c/listViews/postcards.listView-meta.xml
<ListView>
    <fullName>postcards</fullName>
    <columns>Fulfillment__c</columns>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notes_for_designer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>postcard</value>
    </filters>
    <label>Postcards</label>
</ListView>