force-app/main/default/objects/Web_Data__c/listViews/Testimonial_Capture_Initial_Collect.listView-meta.xml
<ListView>
    <fullName>Testimonial_Capture_Initial_Collect</fullName>
    <columns>Fulfillment__c</columns>
    <columns>NAME</columns>
    <columns>Testimonial_Status__c</columns>
    <columns>ASemailcsv__c</columns>
    <columns>Testimonial__c</columns>
    <columns>TestimonialSnippett__c</columns>
    <columns>Revised_Testimonial__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Client Testimonial Capture</value>
    </filters>
    <label>Client Testimonial Capture - Collected</label>
</ListView>